--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-20 22:59+0300\n"
-"PO-Revision-Date: 2023-02-21 00:21+0300\n"
+"PO-Revision-Date: 2023-02-21 00:25+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2189,7 +2189,7 @@ msgstr "Lagerbestand"
 #: storage/templates/storage/redesign/assets.html:22
 msgctxt "assets"
 msgid "выбор действия"
-msgstr "auwählen"
+msgstr "auswählen"
 
 #: storage/templates/storage/redesign/assets.html:23
 msgctxt "assets"
