--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-20 22:59+0300\n"
-"PO-Revision-Date: 2023-02-09 18:15+0300\n"
+"PO-Revision-Date: 2023-02-21 11:25+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -257,17 +257,17 @@ msgstr "Espacio insuficiente. Libere espacio "
 #: factory/views/produce_good.py:192
 msgctxt "factory"
 msgid ", требуется "
-msgstr ", requiere"
+msgstr ", requiere "
 
 #: factory/views/produce_good.py:172
 msgctxt "factory"
 msgid "Недостаточно энергии. В наличии "
-msgstr "No hay suficiente energía. Ahora"
+msgstr "No hay suficiente energía. Ahora "
 
 #: factory/views/produce_good.py:191
 msgctxt "factory"
 msgid "Недостаточно "
-msgstr "No hay suficiente"
+msgstr "No hay suficiente "
 
 #: factory/views/produce_good.py:191
 msgctxt "factory"
@@ -300,64 +300,48 @@ msgid "отклонить всё"
 msgstr "rechazar todo"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:8
-#, fuzzy
-#| msgid "Партия"
 msgctxt "has_party"
 msgid "Партия"
 msgstr "Partido"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:126
-#, fuzzy
-#| msgid "Никнейм"
 msgctxt "has_party"
 msgid "Никнейм"
 msgstr "Apodo"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:127
-#, fuzzy
-#| msgctxt "profile"
-#| msgid "был в сети"
 msgctxt "has_party"
 msgid "Был в сети"
-msgstr "estaba en línea"
+msgstr "Estaba en línea"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:128
-#, fuzzy
-#| msgctxt "storage_upgrade"
-#| msgid "Стоимость"
 msgctxt "has_party"
 msgid "Должность"
-msgstr "Precio"
+msgstr "Posición"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:172
-#, fuzzy
-#| msgid "должность в партии"
 msgctxt "has_party"
 msgid "Покинуть партию?"
-msgstr "posición en el partido"
+msgstr "¿Abandonar el partido?"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:173
 msgctxt "has_party"
 msgid "Вы покинете партию, а также все связанные должности. Продолжить?"
-msgstr ""
+msgstr "Te irás del partido,así como los cargos relacionados. ¿Continuar?"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:174
-#, fuzzy
-#| msgid "Продолжить"
 msgctxt "has_party"
 msgid "Продолжить"
 msgstr "Continuar"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:175
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "has_party"
 msgid "Отмена"
 msgstr "Cancelar"
 
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
-msgstr "Primarias del partido"
+msgstr "Primarias del partido "
 
 #: party/views/lists/region_parties.py:86 party/views/lists/state_parties.py:40
 msgid "Партии региона"
@@ -369,12 +353,9 @@ msgstr "Partidos del mundo"
 
 #: party/views/management/staff/leave_party.py:33
 #: party/views/management/staff/leave_party.py:167
-#, fuzzy
-#| msgctxt "repost"
-#| msgid "Выйти из игры"
 msgctxt "party"
 msgid "Выход из партии"
-msgstr "Quitar"
+msgstr "Salir"
 
 #: party/views/management/staff/leave_party.py:34
 #: party/views/management/staff/leave_party.py:168 player/player.py:286
@@ -478,12 +459,12 @@ msgstr "Cerrar"
 #: party/views/management/staff/leave_party.py:35
 msgctxt "party"
 msgid "Вы не исключили всех однопартийцев"
-msgstr ""
+msgstr "No has expulsado a todos lo miembros"
 
 #: party/views/management/staff/leave_party.py:169
 msgctxt "party"
 msgid "Вы не состоите в указанной партии"
-msgstr ""
+msgstr "No eres miembro del partido seleccionado"
 
 #: party/views/party.py:24 player/views/lists/cash_top.py:99
 #: player/views/lists/cash_top.py:100
@@ -588,7 +569,7 @@ msgstr ""
 #: player/views/game_event/halloween.py:52
 msgctxt "game_event"
 msgid "Хэллоуинский ивент!"
-msgstr "Feliz Halloween"
+msgstr "Feliz Halloween "
 
 #: player/templates/player/redesign/game_event/halloween.html:142
 #: player/templates/player/redesign/game_event/halloween.html:153
@@ -599,7 +580,7 @@ msgstr "Feliz Halloween"
 #: player/templates/player/redesign/game_event/halloween.html:202
 msgctxt "game_event"
 msgid "очков"
-msgstr "Puntos"
+msgstr "Puntos "
 
 #: player/templates/player/redesign/game_event/halloween.html:143
 #: player/templates/player/redesign/game_event/halloween.html:154
@@ -615,7 +596,7 @@ msgstr "dia de Premium"
 #: player/templates/player/redesign/game_event/halloween.html:217
 msgctxt "game_event"
 msgid "Хэллоуинский ивент в WP:"
-msgstr "Evento de Halloween en WP"
+msgstr "Evento de Halloween en WP:"
 
 #: player/templates/player/redesign/game_event/halloween.html:218
 msgctxt "game_event"
@@ -636,7 +617,7 @@ msgstr "- cada 2 000 de energía gastada desbloqueará nuevas recompensas"
 #: player/templates/player/redesign/game_event/halloween.html:221
 msgctxt "game_event"
 msgid "Награды события:"
-msgstr "Recompensas"
+msgstr "Recompensas:"
 
 #: player/templates/player/redesign/game_event/halloween.html:222
 msgctxt "game_event"
@@ -925,7 +906,7 @@ msgstr "tienda"
 #: player/templates/player/redesign/overview_skills.html:120
 #: player/templates/player/redesign/overview_skills.html:184
 msgid "Завершение"
-msgstr "Termina a las "
+msgstr "Termina a las"
 
 #: player/templates/player/redesign/overview_skills.html:50
 #: player/templates/player/redesign/overview_skills.html:99
@@ -1170,7 +1151,7 @@ msgstr "hace mucho tiempo"
 #: player/templatetags/redesign/wallet_operations.py:37
 msgctxt "wallet"
 msgid "Операции"
-msgstr "Operaciones "
+msgstr "Operaciones"
 
 #: player/templates/player/redesign/wallet.html:41
 #: player/templatetags/redesign/wallet_locks.py:40
@@ -1345,7 +1326,7 @@ msgstr "Escudo"
 
 #: player/views/lists/cash_top.py:109
 msgid "Топ богатейших"
-msgstr "Top de los más ricos."
+msgstr "Top de los más ricos"
 
 #: player/views/lists/region_citizens.py:63
 msgid "Граждане региона"
@@ -1534,7 +1515,7 @@ msgstr "Calidad del Mineral"
 #: region/templates/region/redesign/region_info.html:65
 msgctxt "map"
 msgid "Вы здесь"
-msgstr "estas aquí"
+msgstr "Estas aquí"
 
 #: region/templates/region/redesign/region_info.html:71
 msgctxt "map"
@@ -2136,7 +2117,7 @@ msgstr "Almacén"
 #: storage/templates/storage/auctions/auction_info.html:118
 msgctxt "w_auctions"
 msgid "Сделать ставку"
-msgstr "ofertar"
+msgstr "Ofertar"
 
 #: storage/templates/storage/auctions/auctions.html:29
 #: storage/templates/storage/trading/trading.html:40
@@ -2601,7 +2582,7 @@ msgstr "Partido"
 #: storage/templates/storage/trading/trading.html:86
 msgctxt "w_trading"
 msgid "Мои"
-msgstr "Mina"
+msgstr "Mio"
 
 #: storage/templates/storage/trading/trading.html:113
 msgctxt "w_trading"
@@ -2700,12 +2681,12 @@ msgstr ", en stock: "
 #: storage/views/assets/assets_action.py:149
 msgctxt "assets"
 msgid " недостаточно товара "
-msgstr "no hay suficientes bienes"
+msgstr " no hay suficientes bienes "
 
 #: storage/views/assets/assets_action.py:149
 msgctxt "assets"
 msgid " для передачи."
-msgstr "para transferir."
+msgstr " para transferir."
 
 #: storage/views/assets/assets_action.py:157
 msgctxt "assets"
@@ -2730,17 +2711,17 @@ msgstr "En el almacén de la"
 #: storage/views/assets/assets_action.py:230
 msgctxt "assets"
 msgid "недостаточно товара"
-msgstr " no hay suficientes bienes"
+msgstr "no hay suficientes bienes"
 
 #: storage/views/assets/assets_action.py:231
 msgctxt "assets"
 msgid "Требуется:"
-msgstr " Requiere:"
+msgstr "Requiere:"
 
 #: storage/views/assets/assets_action.py:231
 msgctxt "assets"
 msgid ", в наличии:"
-msgstr ", en stock"
+msgstr ", en stock:"
 
 #: storage/views/assets/assets_action.py:238
 msgctxt "assets"
@@ -2878,12 +2859,12 @@ msgstr "Nivel mínimo"
 #: storage/views/storage/upgrade_storage.py:53
 msgctxt "storage_upgrade"
 msgid "Недостаточно материала: "
-msgstr "Nivel máximo"
+msgstr "Nivel máximo: "
 
 #: storage/views/storage/upgrade_storage.py:88
 msgctxt "storage_upgrade"
 msgid "Максимально улучшено: "
-msgstr "Mejora máxima:"
+msgstr "Mejora máxima: "
 
 #: storage/views/storage/upgrade_storage.py:105
 msgctxt "storage_upgrade"
@@ -2996,7 +2977,7 @@ msgstr "Fondos insuficientes. Requiere $"
 #: storage/views/trading/premium_trading.py:110
 msgctxt "w_trading"
 msgid "Не удалось получить блокировку по офферу"
-msgstr "falló el obtener el bloqueo de oferta"
+msgstr "Falló el obtener el bloqueo de oferta"
 
 #: storage/views/trading/accept_offer.py:274
 msgctxt "w_trading"
