--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-22 23:25+0300\n"
-"PO-Revision-Date: 2023-02-21 00:25+0300\n"
+"PO-Revision-Date: 2023-02-22 23:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -300,12 +300,9 @@ msgid "отклонить всё"
 msgstr "alle ablehnen"
 
 #: party/templates/party/redesign/party.html:61
-#, fuzzy
-#| msgctxt "repost"
-#| msgid "Получить"
 msgctxt "has_party"
 msgid "исключить"
-msgstr "Erhalte"
+msgstr "ausschließen"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:8
 msgctxt "has_party"
@@ -328,8 +325,6 @@ msgid "Должность"
 msgstr "Position"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:148
-#, fuzzy
-#| msgid "давно"
 msgctxt "has_party"
 msgid "давно"
 msgstr "vor langer Zeit"
