--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-22 23:25+0300\n"
-"PO-Revision-Date: 2023-02-21 11:25+0300\n"
+"PO-Revision-Date: 2023-02-22 23:47+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -272,7 +272,7 @@ msgstr "No hay suficiente "
 #: factory/views/produce_good.py:191
 msgctxt "factory"
 msgid ". В наличии "
-msgstr ", en stock: "
+msgstr ". En stock: "
 
 #: factory/views/produce_good.py:242
 msgctxt "factory"
@@ -300,12 +300,9 @@ msgid "отклонить всё"
 msgstr "rechazar todo"
 
 #: party/templates/party/redesign/party.html:61
-#, fuzzy
-#| msgctxt "repost"
-#| msgid "Получить"
 msgctxt "has_party"
 msgid "исключить"
-msgstr "Obbtenet"
+msgstr "Expulsar"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:8
 msgctxt "has_party"
@@ -328,11 +325,9 @@ msgid "Должность"
 msgstr "Posición"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:148
-#, fuzzy
-#| msgid "давно"
 msgctxt "has_party"
 msgid "давно"
-msgstr "hace mucho tiempo"
+msgstr "desde"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:175
 msgctxt "has_party"
