--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-22 23:25+0300\n"
-"PO-Revision-Date: 2023-02-22 23:25+0300\n"
+"POT-Creation-Date: 2023-02-23 00:15+0300\n"
+"PO-Revision-Date: 2023-02-23 00:16+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -305,6 +305,7 @@ msgid "исключить"
 msgstr "expel"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:8
+#: party/templates/party/redesign/party_blocks/no_party.html:8
 msgctxt "has_party"
 msgid "Партия"
 msgstr "Party"
@@ -348,6 +349,71 @@ msgstr "Continue"
 msgctxt "has_party"
 msgid "Отмена"
 msgstr "Cancel"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:13
+msgctxt "no_party"
+msgid "Вы не состоите в партии"
+msgstr "You are not a member of any party"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:14
+msgctxt "no_party"
+msgid "Доступные партии"
+msgstr "Available parties"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:14
+msgctxt "no_party"
+msgid "в регионе"
+msgstr "at"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:17
+msgctxt "no_party"
+msgid "вы в полете"
+msgstr "you are in flight"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:19
+msgctxt "no_party"
+msgid "создать партию"
+msgstr "Create a party"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:36
+msgctxt "no_party"
+msgid "все партии"
+msgstr "all parties"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:51
+msgctxt "no_party"
+msgid "региональные"
+msgstr "regional parties"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:66
+#: party/templates/party/redesign/party_blocks/no_party.html:127
+msgctxt "no_party"
+msgid "Партия"
+msgstr "Party"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:77
+#: party/templates/party/redesign/party_blocks/no_party.html:138
+msgctxt "no_party"
+msgid "Действие"
+msgstr "Action"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:103
+#: party/templates/party/redesign/party_blocks/no_party.html:157
+msgctxt "no_party"
+msgid "Вступить"
+msgstr "Join"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:107
+#: party/templates/party/redesign/party_blocks/no_party.html:161
+msgctxt "no_party"
+msgid "Отменить заявку"
+msgstr "Cancel application"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:109
+#: party/templates/party/redesign/party_blocks/no_party.html:163
+msgctxt "no_party"
+msgid "Подать заявку"
+msgstr "Apply"
 
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
