--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-22 23:25+0300\n"
+"POT-Creation-Date: 2023-02-23 00:15+0300\n"
 "PO-Revision-Date: 2023-02-22 23:47+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -305,6 +305,7 @@ msgid "исключить"
 msgstr "Expulsar"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:8
+#: party/templates/party/redesign/party_blocks/no_party.html:8
 msgctxt "has_party"
 msgid "Партия"
 msgstr "Partido"
@@ -348,6 +349,105 @@ msgstr "Continuar"
 msgctxt "has_party"
 msgid "Отмена"
 msgstr "Cancelar"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:13
+#, fuzzy
+#| msgctxt "party"
+#| msgid "Вы не состоите в указанной партии"
+msgctxt "no_party"
+msgid "Вы не состоите в партии"
+msgstr "No eres miembro del partido seleccionado"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:14
+#, fuzzy
+#| msgid "должность в партии"
+msgctxt "no_party"
+msgid "Доступные партии"
+msgstr "posición en el partido"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:14
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "региона"
+msgctxt "no_party"
+msgid "в регионе"
+msgstr "de región"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:17
+#, fuzzy
+#| msgctxt "daily_header"
+#| msgid "в полете"
+msgctxt "no_party"
+msgid "вы в полете"
+msgstr "volando"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:19
+#, fuzzy
+#| msgctxt "has_party"
+#| msgid "Покинуть партию?"
+msgctxt "no_party"
+msgid "создать партию"
+msgstr "¿Abandonar el partido?"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:36
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "партии"
+msgctxt "no_party"
+msgid "все партии"
+msgstr "Partidos"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:51
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "региона"
+msgctxt "no_party"
+msgid "региональные"
+msgstr "de región"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:66
+#: party/templates/party/redesign/party_blocks/no_party.html:127
+#, fuzzy
+#| msgid "Партия"
+msgctxt "no_party"
+msgid "Партия"
+msgstr "Partido"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:77
+#: party/templates/party/redesign/party_blocks/no_party.html:138
+#, fuzzy
+#| msgctxt "w_trading"
+#| msgid "Действие"
+msgctxt "no_party"
+msgid "Действие"
+msgstr "Acción"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:103
+#: party/templates/party/redesign/party_blocks/no_party.html:157
+#, fuzzy
+#| msgctxt "w_trading"
+#| msgid "Купить"
+msgctxt "no_party"
+msgid "Вступить"
+msgstr "Comprar"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:107
+#: party/templates/party/redesign/party_blocks/no_party.html:161
+#, fuzzy
+#| msgctxt "w_trading"
+#| msgid "Отменить"
+msgctxt "no_party"
+msgid "Отменить заявку"
+msgstr "Cancelar"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:109
+#: party/templates/party/redesign/party_blocks/no_party.html:163
+#, fuzzy
+#| msgctxt "w_auctions"
+#| msgid "Сделать ставку"
+msgctxt "no_party"
+msgid "Подать заявку"
+msgstr "Ofertar"
 
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
