--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-22 23:25+0300\n"
+"POT-Creation-Date: 2023-02-23 00:15+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -365,6 +365,7 @@ msgid "исключить"
 msgstr "Dapatkan"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:8
+#: party/templates/party/redesign/party_blocks/no_party.html:8
 #, fuzzy
 #| msgid "Партия"
 msgctxt "has_party"
@@ -426,6 +427,103 @@ msgstr "Lanjutkan"
 msgctxt "has_party"
 msgid "Отмена"
 msgstr "Batal"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:13
+#, fuzzy
+#| msgctxt "repost"
+#| msgid "Выйти из игры"
+msgctxt "no_party"
+msgid "Вы не состоите в партии"
+msgstr "Keluar"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:14
+#, fuzzy
+#| msgid "должность в партии"
+msgctxt "no_party"
+msgid "Доступные партии"
+msgstr "posisi dalam partai"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:14
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "региона"
+msgctxt "no_party"
+msgid "в регионе"
+msgstr "wilayah"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:17
+#, fuzzy
+#| msgctxt "daily_header"
+#| msgid "в полете"
+msgctxt "no_party"
+msgid "вы в полете"
+msgstr "dalam perjalanan"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:19
+#, fuzzy
+#| msgid "должность в партии"
+msgctxt "no_party"
+msgid "создать партию"
+msgstr "posisi dalam partai"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:36
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "партии"
+msgctxt "no_party"
+msgid "все партии"
+msgstr "partai"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:51
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "региона"
+msgctxt "no_party"
+msgid "региональные"
+msgstr "wilayah"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:66
+#: party/templates/party/redesign/party_blocks/no_party.html:127
+#, fuzzy
+#| msgid "Партия"
+msgctxt "no_party"
+msgid "Партия"
+msgstr "Partai"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:77
+#: party/templates/party/redesign/party_blocks/no_party.html:138
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "выбор действия"
+msgctxt "no_party"
+msgid "Действие"
+msgstr "tindakan"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:103
+#: party/templates/party/redesign/party_blocks/no_party.html:157
+#, fuzzy
+#| msgctxt "skills"
+#| msgid "недоступно"
+msgctxt "no_party"
+msgid "Вступить"
+msgstr "tidak tersedia"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:107
+#: party/templates/party/redesign/party_blocks/no_party.html:161
+#, fuzzy
+#| msgid "Отмена"
+msgctxt "no_party"
+msgid "Отменить заявку"
+msgstr "Batal"
+
+#: party/templates/party/redesign/party_blocks/no_party.html:109
+#: party/templates/party/redesign/party_blocks/no_party.html:163
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "доставка"
+msgctxt "no_party"
+msgid "Подать заявку"
+msgstr "pengiriman"
 
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
