--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-11 22:10+0300\n"
-"PO-Revision-Date: 2023-04-11 22:04+0300\n"
+"PO-Revision-Date: 2023-04-11 22:45+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -347,7 +347,7 @@ msgstr "nicht verfügbar"
 #: party/templates/party/redesign/manage.html:153
 msgctxt "party_manage"
 msgid "добавить описание партии"
-msgstr "Positionsbeschreibung hinzufügen"
+msgstr "Parteibeschreibung hinzufügen"
 
 #: party/templates/party/redesign/manage.html:168
 msgctxt "party_manage"
