--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-11 22:10+0300\n"
-"PO-Revision-Date: 2023-04-10 23:47+0300\n"
+"PO-Revision-Date: 2023-04-12 22:18+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1040,7 +1040,7 @@ msgstr "wars"
 
 #: player/templates/player/redesign/new_player.html:34
 msgid "Создание персонажа"
-msgstr "Создание персонажа"
+msgstr "New player"
 
 #: player/templates/player/redesign/new_player.html:38
 #: player/templatetags/redesign/skill_top/endurance_top.py:58
