--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -100,6 +100,7 @@ msgctxt "goods"
 msgid "Бензин"
 msgstr "Gas"
 
+#. Last modified by Администратор, id 1
 #: factory/models/project.py:39 state/models/treasury.py:68
 #: storage/models/destroy.py:44 storage/models/storage.py:63
 #: storage/models/storage.py:158 storage/models/trade_offer.py:84
@@ -178,13 +179,14 @@ msgctxt "goods"
 msgid "ПТ-орудия"
 msgstr "AT-canon"
 
+#. Last modified by Администратор, id 1
 #: factory/models/project.py:232 state/models/treasury.py:103
 #: storage/models/destroy.py:70 storage/models/storage.py:86
 #: storage/models/storage.py:188 storage/models/trade_offer.py:94
 #: storage/models/transport.py:183
 msgctxt "goods"
 msgid "Мины"
-msgstr ""
+msgstr "Mines"
 
 #: factory/models/project.py:248 state/models/treasury.py:106
 #: storage/models/destroy.py:72 storage/models/storage.py:85
