--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2235,12 +2235,13 @@ msgctxt "goods"
 msgid "Дизельное топливо"
 msgstr "Diesel"
 
+#. Last modified by Администратор, id 1
 #: state/models/treasury.py:94 storage/models/destroy.py:64
 #: storage/models/storage.py:80 storage/models/storage.py:208
 #: storage/models/trade_offer.py:95
 msgctxt "goods"
 msgid "Орбитальные орудия"
-msgstr "Orbital cannons"
+msgstr "Orbital platforms"
 
 #: state/templates/state/state_view.html:41
 msgid "Donate"
