--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -3114,10 +3114,11 @@ msgctxt "assets"
 msgid "Перемещение товара"
 msgstr "Goods transfer"
 
+#. Last modified by cheshiretail, id 350
 #: storage/views/assets/assets_action.py:89
 msgctxt "assets"
 msgid "Запрещено вывозить товары из атакованных регионов"
-msgstr ""
+msgstr "It is forbidden to export goods from the attacked regions"
 
 #: storage/views/assets/assets_action.py:90
 #: storage/views/assets/assets_action.py:192
